--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <!-- BOXICON -->
+     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- FONTS -->
      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
      <!-- flowbite -->
@@ -16,5 +18,7 @@
     <script type="module" src="/src/main.js"></script>
     <!-- Flowbite -->
      <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+     <!-- BOX ICON -->
+      <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   </body>
 </html>
